# rust-in-action-src

./: .gitignore  Cargo.toml  README.md
ch02/: Cargo.toml
ch03/: Cargo.toml
ch04/src/: lib.rs  status_message.rs
ch06/: Cargo.toml
ch07/: Cargo.toml
ch07/serde-eg/: Cargo.toml
ch07/src/: lib.rs
ch07/src/actionkv/: kv.rs  mod.rs
ch09/: Cargo.toml
ch10/: Cargo.toml  multijoin.csv  multijoin.gnumeric  spinloop.csv  spinloop.gnumeric
ch11/: Cargo.toml
