[package]
name = "ch09"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.30"
clap = { version = "4.4.2", features = ["cargo"] }

[target.'cfg(not(windows))'.dependencies]
libc = "0.2.147"
